# f-admin-backend

./: README.md  project.toml  pyproject.toml
f_admin_backend/: consts.py  endpoints.py  routers.py  settings.py
f_admin_backend/logic/: actions.py  getters.py
f_admin_client/: endpoints.py
f_admin_client/logic/: actions.py
